Checked days back condition and added new failing test.